Add tracking info

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,4 @@ email: marcella.wigg@gmail.com
 url: http://marcellawigg.github.io
 baseurl: /basic-website
 github_username: marcellawigg
+google_analytics: UA—XXXXXXXX-X
